
syntax = "proto3";
option go_package = "./;api";
import "gogo.proto";

package SC2APIProtocol;

import "common.proto";

// Issue various useful commands to the game engine.
message DebugCommand {
oneof command {
DebugDraw draw = 1;
DebugGameState game_state = 2;
DebugCreateUnit create_unit = 3;
DebugKillUnit kill_unit = 4;
DebugTestProcess test_process = 5;
DebugSetScore score = 6;
DebugEndGame end_game = 7;
DebugSetUnitValue unit_value = 8;
}
}

message DebugDraw {
repeated DebugText text = 1;
repeated DebugLine lines = 2;
repeated DebugBox boxes = 3;
repeated DebugSphere spheres = 4;
}

message Line {
Point p0 = 1;
Point p1 = 2;
}

message Color {
uint32 r = 1;
uint32 g = 2;
uint32 b = 3;
}

// Display debug text on screen.
message DebugText {
Color color = 1;
string text = 2;
Point virtual_pos = 3;
Point world_pos = 4;
uint32 size = 5;
}

// Display debug lines on screen.
message DebugLine {
Color color = 1;
Line line = 2;
}

// Display debug boxes on screen.
message DebugBox {
Color color = 1;
Point min = 2;
Point max = 3;
}

// Display debug spheres on screen.
message DebugSphere {
Color color = 1;
Point p = 2;
float r = 3;
}

enum DebugGameState {
DebugGameState_nil = 0 [(gogoproto.enumvalue_customname) = "nil"];
show_map = 1;
control_enemy = 2;
food = 3;
free = 4;
all_resources = 5;
god = 6;
minerals = 7;
gas = 8;
cooldown = 9;
tech_tree = 10;
upgrade = 11;
fast_build = 12;
}

message DebugCreateUnit {
uint32 unit_type = 1 [(gogoproto.casttype) = "UnitTypeID"];
int32 owner = 2 [(gogoproto.casttype) = "PlayerID"];
Point2D pos = 3;
uint32 quantity = 4;
}

message DebugKillUnit {
repeated uint64 tag = 1 [(gogoproto.casttype) = "UnitTag"];
}

message DebugTestProcess {
enum Test {
Test_nil = 0 [(gogoproto.enumvalue_customname) = "nil"];
hang = 1;
crash = 2;
exit = 3;
}
Test test = 1;
int32 delay_ms = 2;
}

message DebugSetScore {
float score = 1;
}

message DebugEndGame {
enum EndResult {
EndResult_nil = 0 [(gogoproto.enumvalue_customname) = "nil"];
Surrender = 1;
DeclareVictory = 2;
}
EndResult end_result = 1;
}

message DebugSetUnitValue {
enum UnitValue {
UnitValue_nil = 0 [(gogoproto.enumvalue_customname) = "nil"];
Energy = 1;
Life = 2;
Shields = 3;
}
UnitValue unit_value = 1;
float value = 2;
uint64 unit_tag = 3 [(gogoproto.casttype) = "UnitTag"];
}

